learn/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nproject
  labels:
    owner: macarious
    project: nodejs
    app: nodejs
    db: mongodb
spec:
  containers:
    - name: mongodb
      image: mongo:4
      ports:
        - containerPort: 27017
    - name: nodejs
      image: macarious25siv/project:NodeV5
      ports:
        - containerPort: 5000
